crates/aranya-policy-lang/tests/data/ffi_use/underscore.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
Syntax error: line 1 column 5:  --> 1:5
  |
1 | use _
  |     ^---
  |
  = expected identifier
